<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.krokken.footballscorekeeper.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_background">

        <ImageView
            android:id="@+id/background_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/football" />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/team_name_margin_top"
                    android:text="@string/team_a"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/team_name_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/team_a_score_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/_0"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/team_score_text_size" />

                <Button
                    android:id="@+id/touchdown_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="@dimen/button_margin_right"
                    android:layout_marginLeft="@dimen/button_margin_left"
                    android:layout_marginRight="@dimen/button_margin_right"
                    android:layout_marginStart="@dimen/button_margin_left"
                    android:text="@string/touchdown_name"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="@dimen/button_text_size" />

                <Button
                    android:id="@+id/field_goal_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="@dimen/button_margin_right"
                    android:layout_marginLeft="@dimen/button_margin_left"
                    android:layout_marginRight="@dimen/button_margin_right"
                    android:layout_marginStart="@dimen/button_margin_left"
                    android:text="@string/field_goal_name"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="@dimen/button_text_size" />

                <Button
                    android:id="@+id/extra_point_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="@dimen/button_margin_right"
                    android:layout_marginLeft="@dimen/button_margin_left"
                    android:layout_marginRight="@dimen/button_margin_right"
                    android:layout_marginStart="@dimen/button_margin_left"
                    android:text="@string/extra_point_name"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="@dimen/button_text_size" />

                <Button
                    android:id="@+id/safety_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="@dimen/button_margin_right"
                    android:layout_marginLeft="@dimen/button_margin_left"
                    android:layout_marginRight="@dimen/button_margin_right"
                    android:layout_marginStart="@dimen/button_margin_left"
                    android:text="@string/safety_name"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="@dimen/button_text_size" />

                <Button
                    android:id="@+id/two_point_conversion_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="@dimen/button_margin_right"
                    android:layout_marginLeft="@dimen/button_margin_left"
                    android:layout_marginRight="@dimen/button_margin_right"
                    android:layout_marginStart="@dimen/button_margin_left"
                    android:text="@string/two_point_conversion_name"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="@dimen/button_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/team_name_margin_top"
                    android:text="@string/team_b"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/team_name_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/team_b_score_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/_0"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/team_score_text_size" />

                <Button
                    android:id="@+id/touchdown_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="@dimen/button_margin_right"
                    android:layout_marginLeft="@dimen/button_margin_left"
                    android:layout_marginRight="@dimen/button_margin_right"
                    android:layout_marginStart="@dimen/button_margin_left"
                    android:text="@string/touchdown_name"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="@dimen/button_text_size" />

                <Button
                    android:id="@+id/field_goal_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="@dimen/button_margin_right"
                    android:layout_marginLeft="@dimen/button_margin_left"
                    android:layout_marginRight="@dimen/button_margin_right"
                    android:layout_marginStart="@dimen/button_margin_left"
                    android:text="@string/field_goal_name"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="@dimen/button_text_size" />

                <Button
                    android:id="@+id/extra_point_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="@dimen/button_margin_right"
                    android:layout_marginLeft="@dimen/button_margin_left"
                    android:layout_marginRight="@dimen/button_margin_right"
                    android:layout_marginStart="@dimen/button_margin_left"
                    android:text="@string/extra_point_name"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="@dimen/button_text_size" />

                <Button
                    android:id="@+id/safety_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="@dimen/button_margin_right"
                    android:layout_marginLeft="@dimen/button_margin_left"
                    android:layout_marginRight="@dimen/button_margin_right"
                    android:layout_marginStart="@dimen/button_margin_left"
                    android:text="@string/safety_name"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="@dimen/button_text_size" />

                <Button
                    android:id="@+id/two_point_conversion_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="@dimen/button_margin_right"
                    android:layout_marginLeft="@dimen/button_margin_left"
                    android:layout_marginRight="@dimen/button_margin_right"
                    android:layout_marginStart="@dimen/button_margin_left"
                    android:text="@string/two_point_conversion_name"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="@dimen/button_text_size" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/scored_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/scored_image_margin_top" />

        <TextView
            android:id="@+id/score_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/score_description_margin_bottom"
            android:layout_marginTop="@dimen/score_description_margin_top"
            android:text="@string/start_game_text"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/score_description_text_size" />

        <Button
            android:id="@+id/reset_scores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/score_description_text"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/reset_score_margin_bottom"
            android:layout_marginTop="@dimen/reset_score_margin_top"
            android:padding="@dimen/reset_score_padding"
            android:text="@string/reset_scores_name"
            android:textColor="@android:color/holo_green_light" />
    </RelativeLayout>
</ScrollView>
